# spark-optimisation

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  main.py  pyproject.toml  test.py  test_config.py  test_main.py  todo.md
config/: airflow.cfg
dags/: taxi.py
notebooks/: playground.ipynb
src/spark_optimisation/: __init__.py  lib.py  main.py  taxi.py
src/spark_optimisation/taxi/: cleanse.py  cli.py  raw.py
tests/: test_main.py
